--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <section class="contact">
             <div class="contact-text fadein">
                 <h2 class="title">Contact</h2>
-                <p>東京都新宿区市谷左内町00-00</p>
+                <p>東京都渋谷区渋谷1-21-18 渋谷教育学園 植島タワー</p>
                 <p>営業時間 10:00〜19:00</p>
                 <button class="contact-button" onclick="contactScroll()">お問い合わせ</button>
             </div>
